name:                GluinoStopPolarization
version:             0.1.0.0
synopsis:            Top polarization study in Gluino decays
license:             GPL-3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Calculation.ParSelector
                       Calculation.Variables
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       containers >=0.5,
                       double-conversion >=0.2,
                       transformers >=0.4,
                       hep-vector >=0.1,
                       lhef-parse >=0.1
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -fno-warn-unused-do-bind

executable gluinostoppol_calc
  main-is:             Calc.hs
  other-modules:       IOHelper
  build-depends:       base >=4.6,
                       attoparsec >=0.12,
                       bytestring >=0.10,
                       directory >=1.2,
                       optparse-applicative >=0.9,
                       transformers >=0.4,
                       lhef-parse >=0.1,
                       GluinoStopPolarization
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind

executable gluinostoppol_createdb
  main-is:             CreateDB.hs
  other-modules:       IOHelper
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       directory >=1.2,
                       optparse-applicative >=0.9,
                       process >=1.2,
                       GluinoStopPolarization
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
