name:                GluinoStopPolarization
version:             0.1.0.0
synopsis:            Top polarization study in Gluino decays
license:             GPL-3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Calculation.ParSelector
                       Calculation.Variables
                       Interface.IOHelper
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       containers >=0.5,
                       directory >=1.2,
                       double-conversion >=0.2,
                       transformers >=0.4,
                       hep-vector >=0.1,
                       lhef-parse >=0.1
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -fno-warn-unused-do-bind

executable gluinostoppol_calcvar
  main-is:             CalcVar.hs
  build-depends:       base >=4.6,
                       attoparsec >=0.12,
                       bytestring >=0.10,
                       containers >=0.5,
                       HDBC >=2.4,
                       HDBC-sqlite3 >=2.3,
                       optparse-applicative >=0.9,
                       transformers >=0.4,
                       lhef-parse >=0.1,
                       GluinoStopPolarization
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind

executable gluinostoppol_calcraw
  main-is:             CalcRaw.hs
  build-depends:       base >=4.6,
                       attoparsec >=0.12,
                       bytestring >=0.10,
                       containers >=0.5,
                       optparse-applicative >=0.9,
                       transformers >=0.4,
                       lhef-parse >=0.1,
                       GluinoStopPolarization
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind

executable gluinostoppol_createdb
  main-is:             CreateDB.hs
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       containers >=0.5,
                       directory >=1.2,
                       optparse-applicative >=0.9,
                       process >=1.2,
                       GluinoStopPolarization
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind

executable gluinostoppol_er_true
  main-is:             EratioTrue.hs
  build-depends:       base >=4.6,
                       HDBC >=2.4,
                       HDBC-sqlite3 >=2.3,
                       optparse-applicative >=0.9,
                       statistics >=0.11,
                       vector >=0.10,
                       GluinoStopPolarization
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
